azure/testfileshare-pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: testfileshare-pod
spec:
 containers:
  - image: kubernetes/pause
    name: azure
    volumeMounts:
      - name: azure
        mountPath: /mnt/azure
 volumes:
  - name: azure
    azureFile:
      secretName: azure-secret
      shareName: fileshare
      readOnly: false
