azure/loadbalancer-internal.yml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service-private
  namespace: kube-system
  labels:
    k8s-traefik: traefik  
  annotations:
    # from https://radu-matei.com/blog/k8s-appsvc/
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    k8s-app: traefik-ingress-lb
  externalTrafficPolicy: "Local"
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
    - protocol: TCP
      port: 443
      name: ssl      
  type: LoadBalancer
---
