azure/loadbalancer-public.yml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service-public
  namespace: kube-system
  labels:
    k8s-traefik: traefik    
spec:
  selector:
    k8s-app: traefik-ingress-lb
# https://kubernetes.io/docs/tutorials/services/source-ip/
  externalTrafficPolicy: "Local"
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: ssl      
  type: LoadBalancer
  # Special notes for Azure: To use user-specified public type loadBalancerIP, a static type public IP address resource needs to be created first, 
  # and it should be in the same resource group of the cluster. 
  # note that in the case of AKS, that resource group is MC_<resourcegroup>_<cluster>
  # Then you could specify the assigned IP address as loadBalancerIP
  # https://kubernetes.io/docs/concepts/services-networking/service/#type-loadbalancer
  loadBalancerIP: PUBLICIP
---
